Like anything good in tech, turn it off and on again. If that doesn't work, clear app data and then log back in, close the app, and open it again.

l[Can I see the source?]l
https://github.com/bradsh/ShackBrowse It is a mess. I am not a professional programmer nor do I have any degrees in computer science. I just wanted a shack app so I learned to program.

-->

$ 5.6.1
% v 5.6.1
_ Mar 19, 2018
* Shack Messages title now indicates if you're looking at sent or inbox
* Back button now backs out of fullscreen embedded Youtube
* Bug Fix: Fixed Twitter related crashes. Twitter links that can't be embedded won't be embedded instead of crashing
* Bug Fix: Message inbox will now show all pages if you scroll down instead of only the first page

$ 5.6.0
% v 5.6.0
_ Mar 10, 2018
* Youtube and Twitter embedding
* Default for all embedding is now "always" even without wifi. Option in settings.

$ 5.5.1
% v 5.5.1
_ Feb 20, 2018
* Ability to mute reply notifications for a single post
* Default Link Option for youtube now includes twitter links going to external browser. Check settings for more options.
* Bug Fix: A few icon sizes
* Bug Fix: Cloud statistics dates weren't updating to current day
* Bug Fix: Stats per day now based on first ever recorded stat rather than first record for that category

$ 5.5.0
% v 5.5.0
_ Dec 7, 2017
* Select all button in text editor, useful for quicker text decoration
* Themed app colors now apply to navigation bar on supported devices
* New random macro
* Rainbow is more rainbow-ey
* New Zalgo macro, for the dark ones
* Android build tools / plugins / libraries updated. There may be bugs.
* Bug Fix: Chattypics Uploader should now work again when you share images to it from another android app

$ 5.4.10
% v 5.4.10
_ Nov 13, 2017
* Major thread loading optimizations for those with lots of starred posts
* Menu shows number of favorited threads
* * N U K E ' D * macro
* Option to turn off back-to-exit-guard (now defaults to off)

$ 5.4.9
% v 5.4.9