@@ -77,8 +77,9 @@ https://github.com/bradsh/ShackBrowse It is a mess. I am not a professional prog
 $ 5.6.1
 % v 5.6.1
 _ Mar 19, 2018
-* Shack Messages title now indicates if you're looking at sent or inbox
+* Shack Messages title now indicates if you're looking at sent or inbox, new icons for this
 * Back button now backs out of fullscreen embedded Youtube
+* Confirmation dialog for notification clear button
 * Bug Fix: Fixed Twitter related crashes. Twitter links that can't be embedded won't be embedded instead of crashing
 * Bug Fix: Message inbox will now show all pages if you scroll down instead of only the first page
 
